--- a/css/signup.css
+++ b/css/signup.css
@@ -10,7 +10,6 @@ body{
 }
 body > *{
     font-family: 'Ubuntu', sans-serif;
-    letter-spacing: 1px;
 }
 
 .free-text {
